# CryptocurrencyTradingEngine

./: .gitignore  CMakeLists.txt  README.md
include/: arbitrage_strategy.h  ccxt_client.h  crow_router.h  data_sync_service.h  engine_api.h  market_making_strategy.h  order_manager.h  redis_writer.h  scheduler.hpp  strategy_result.h  timescaledb_reader.h  trading_engine_manager.h
src/: arbitrage_strategy.cpp  ccxt_client.cpp  crow_router.cpp  data_sync_service.cpp  engine_api.cpp  engine_server.cpp  main.cpp  market_making_strategy.cpp  order_manager.cpp  redis_writer.cpp  scheduler.cpp  timescaledb_reader.cpp  trading_engine_manager.cpp
